# WeKit

./: .gitignore  CONTRIBUTING.md  README.md  VERSIONING.md  build.gradle.kts  frida-inject.js  settings.gradle.kts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/embedded/monet/: customize.sh  monet_tables.json  template_api31.apk  template_api34.apk
app/src/main/: AndroidManifest.xml
app/src/main/rust/wekit-native/: Cargo.toml
app/src/main/rust/wekit-native/src/: audio_utils.rs  lib.rs  logging.rs  native_hook.rs  silk_codec.rs  telegram_sticker.rs  utils.rs
docs/: README.md  SUMMARY.md  configuration.md  cosmic-level-disclaimer.md  development.md  faq.md  generate_summary.py  module-settings.md
docs/features/beautify/: add-main-screen-fab.md  apply-dialog-background-blur.md  center-profile-card.md  custom-dpi.md  hide-home-screen-swipe-down-page.md  hide-me-tab-page-items.md  monet-engine.md  replace-navigation-bar.md
docs/features/chat/: README.md  anti-message-recall-1.md  anti-message-recall-3.md  auto-enable-no-compress-on-send-media.md  auto-speech-to-text.md  auto-view-original-media.md  block-abnormal-size-stickers.md  chat-input-bar-enhancements.md  chat-toolbar.md  conversation-grouping.md  disable-message-collapsing.md  disable-pinned-chats-collapsing.md  disable-typing-status-uploading.md  display-group-member-real-names-last-char.md  display-group-member-roles.md  (+25 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+627 files in other folders)
