[package]
name = "wekit-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "wekit_native"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.22.4", default-features = false }
libc = "0.2.183"
markdown = "1.0.0"
dobby-api = "1.0.1"
goblin = { version = "0.10.5", features = [
    "elf32",
    "elf64",
    "endian_fd",
    "archive",
    "std",
], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
